--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 /* General */
-html, body{
+
+html,
+body {
     height: 100%;
 }
 
@@ -18,7 +20,9 @@ h3 {
     text-transform: uppercase;
 }
 
+
 /* PARALAX (Generic) */
+
 .bg-parallax {
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,8 +30,10 @@ h3 {
     background-attachment: fixed;
 }
 
+
 /* BUTTONS Generic */
-.btn-general{
+
+.btn-general {
     border-color: #fff;
     border-width: 2px;
     border-radius: 0;
@@ -36,46 +42,76 @@ h3 {
     font-weight: 400;
     text-transform: uppercase;
 }
-.btn-white{
+
+.btn-white {
     border-color: #fff;
     color: #fff;
 }
-.btn-white:hover,.btn-white:focus{
-background-color: #fff;
-color: #41464b;
+
+.btn-white:hover,
+.btn-white:focus {
+    background-color: #fff;
+    color: #41464b;
 }
+
+.btn-blue {
+    border-color: #34c6d3;
+    color: #34c6d3;
+}
+
+.btn-blue:hover,
+.btn-blue:focus {
+    background-color: #34c6d3;
+    color: #fff;
+}
+
+
 /* CONTENT (Generic) */
-.content-box{
+
+.content-box {
     padding: 60px 0 60px 0;
 }
-.content-title h3{
+
+.content-title h3 {
     font-size: 30px;
     font-weight: 700;
     text-align: center;
     margin: 0 0 30px 0;
 }
-.content-title-underline{
+
+.content-title-underline {
     width: 30px;
     height: 3px;
     background-color: #34c6d3;
     margin: 0 auto 30px auto;
 }
+
+
 /* ANIMATE */
-#home-cover,#home-heading,#home-btn{
-animation-duration: .5s;
+
+#home-cover,
+#home-heading,
+#home-btn {
+    animation-duration: .5s;
 }
-#home-cover{
-    animation-delay:.1s;
+
+#home-cover {
+    animation-delay: .1s;
 }
-#home-heading{
-    animation-delay:.5s;
+
+#home-heading {
+    animation-delay: .5s;
 }
-#home-btn{
+
+#home-btn {
     animation-delay: 1s;
 }
+
+
 /* HOME */
+
 #home {
- height: 100%;
+    height: 100%;
 }
 
 #home-cover {
@@ -83,30 +119,34 @@ animation-duration: .5s;
     background-image: url("../img/bg-home.jpg");
 }
 
-#home-content-box{
+#home-content-box {
     height: 100%;
     width: 100%;
     display: table;
 }
 
-#home-content-box-inner{
+#home-content-box-inner {
     display: table-cell;
     vertical-align: middle;
 }
 
-#home-heading h3{
+#home-heading h3 {
     color: #fff;
     font-size: 55px;
     font-weight: 700;
     margin: 20px 0 20px 0;
 }
+
+
 /* SERVICES */
-.service-item{
+
+.service-item {
     padding: 20px 0 20px 0;
-    margin-bottom:20px;
-    cursor: pointer; 
+    margin-bottom: 20px;
+    cursor: pointer;
 }
-.service-item-icon i{
+
+.service-item-icon i {
     color: #34c6d3;
     float: left;
     padding: 15px;
@@ -115,18 +155,59 @@ animation-duration: .5s;
     height: 75px;
     text-align: center;
 }
-.service-item:hover .service-item-icon i{
+
+.service-item:hover .service-item-icon i {
     color: #fff;
     background-color: #34c6d3;
 }
 
-.service-item-title h3{
+.service-item-title h3 {
     font-size: 20px;
     font-weight: 400;
     margin: 0 0 10px 0;
 }
 
-.service-item-description p{
+.service-item-description p {
     margin: 0;
     padding-left: 85px;
+}
+
+
+/* ABOUT */
+
+#about-content-box {
+    float: left;
+    height: 700px;
+}
+
+#about-content-box-outer {
+    width: 100%;
+    height: 100%;
+    display: table;
+}
+
+#about-content-box-inner {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#about .content-title h3 {
+    text-align: left;
+}
+
+#about .content-title-underline {
+    margin: 0 0 30px 0;
+}
+
+#about-description p {
+    margin-bottom: 30px;
+}
+
+#about-bg-diagonal {
+    width: 60%;
+    height: 700px;
+    float: right;
+    border-left: 200px solid #fff;
+    border-top: 700px solid transparent;
+    background-image: url("../img/bg-about.jpg");
 }
