--- a/css/style.css
+++ b/css/style.css
@@ -211,3 +211,24 @@ h3 {
     border-top: 700px solid transparent;
     background-image: url("../img/bg-about.jpg");
 }
+
+
+/* WORK */
+
+.row.no-gutters [class*=col-] {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.img-wrapper {
+    overflow: hidden;
+}
+
+.img-wrapper img {
+    transition: transform .5s ease;
+}
+
+.img-wrapper img:hover {
+    transform: scale(1.5);
+    cursor: zoom-in;
+}
