--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@ h3 {
     margin: 0 0 30px 0;
 }
 
+.content-title-white h3 {
+    color: #fff;
+}
+
 .content-title-underline {
     width: 30px;
     height: 3px;
@@ -112,6 +116,18 @@ h3 {
 
 .icon-gray i:hover {
     color: #34c6d3;
+}
+
+
+/* CAROUSEL */
+
+.owl-theme .owl-dots .owl-dot span {
+    background: #96e2e8;
+}
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+    background: #34c6d3;
 }
 
 
@@ -264,15 +280,6 @@ h3 {
 
 /* TEAM */
 
-#team .owl-theme .owl-dots .owl-dot span {
-    background: #96e2e8;
-}
-
-#team .owl-theme .owl-dots .owl-dot.active span,
-.owl-theme .owl-dots .owl-dot:hover span {
-    background: #34c6d3;
-}
-
 .team-member {
     margin: 0 15px;
 }
@@ -295,4 +302,68 @@ h4.team-member-designation {
     font-style: italic;
     letter-spacing: 1px;
     margin-top: 5px;
+}
+
+
+/* TESTIMONIALS */
+
+#testimonials-cover {
+    background-image: url('../img/bg-testimonials.jpg');
+}
+
+#testimonials .content-box {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+#customers-testimonials {
+    padding: 50px 0;
+}
+
+.testimonial img {
+    max-width: 120px;
+    margin: 0 auto 0 auto;
+}
+
+.testimonial blockquote {
+    border: 0;
+    font-family: Georgia, sans-serif;
+    font-style: italic;
+    color: #fff;
+    padding: 6px 150px;
+    position: relative;
+}
+
+.testimonial blockquote p {
+    color: #fff;
+}
+
+.testimonial blockquote::before,
+.testimonial blockquote::after {
+    font-size: 80px;
+    font-style: normal;
+    line-height: 1;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+}
+
+.testimonial blockquote::before {
+    content: "\201C";
+    top: 0;
+    left: 100px;
+}
+
+.testimonial blockquote::after {
+    content: "\201D";
+    bottom: 0;
+    right: 100px;
+}
+
+.testimonial-author p {
+    color: #fff;
+    font-size: 17px;
+}
+
+.testimonial-author p strong {
+    display: block;
 }
