--- a/css/style.css
+++ b/css/style.css
@@ -549,7 +549,7 @@ form .form-control {
 #footer-menu {
     float: left;
     color: #fff;
-    font-size: 16x;
+    font-size: 16px;
     font-weight: 300;
 }
 
